// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playground: only the child should be rendered 1`] = `
<div>
  hello world
</div>
`;

exports[`Playground: the child component should have a context with a key "store" 1`] = `
<div>
  hello world
</div>
`;

exports[`Plug: defaultValue should be used before stream is defined 1`] = `
<div>
  default value
</div>
`;

exports[`Plug: stream value should be used 1`] = `
<div>
  value
</div>
`;
